--- a/analysis/soc_ref_cat_analysis_2.Rmd
+++ b/analysis/soc_ref_cat_analysis_2.Rmd
@@ -15,6 +15,7 @@ library(langcog)
 library(tidyverse)
 library(stringr)
 library(magrittr)
+library(lmerTest)
 
 example_file <- "raw_data/020218_01-eye_data Samples.txt"
 
@@ -27,10 +28,25 @@ key <- "trial_morphs.csv"
 
 Preliminaries.
 
-```{r eval = FALSE}
+```{r}
 #read in trial data.
 
 demographics <- read_csv(demographics_sheet)
+
+# example_f <- 
+#   read_csv(example_trial_file)
+# 
+# condition_test <- 
+#   demographics %>% 
+#   filter(SID == "020218_01") %>% 
+#   pull(Condition)
+# 
+# condition_test
+
+
+include <- 
+  demographics %>% 
+  filter(Exclude == "n") 
 
 trial_key <- read_csv(key)
 
@@ -45,6 +61,7 @@ for (f in files) {
     demographics %>% 
     filter(`SID` == subj_id) %>% 
     pull("Condition")
+
   
   jf <- paste("trial_data/", f, sep = "")
   jd <- read_csv(jf)
@@ -62,27 +79,33 @@ for (f in files) {
       camera_lag = webcam_onset - camera_onset,
       webcam_length = jd$extcam_length.onset[1] / 1000,
       onset = onset + camera_lag,
-      offset = offset + camera_lag,
-      condition = condition
-      
-    ) %>% 
-    left_join(
-      trial_key, 
-      by = c("trial" = "Trial", "condition" = "Condition")
-    ) %>% 
-    mutate(
-      accuracy = case_when(
-        correct_side == "M" ~ NA,
-        correct_side != "M" ~ correct_side == chosen_side
-      )
-    ) %>% 
-    left_join(
-      demographics %>% select(SID, age),
-      by = "SID"
+      offset = offset + camera_lag
+
     )
   d_trials <- bind_rows(d_trials, id)
   
 }
+
+d_trials <- 
+  d_trials  %>%
+  left_join(
+    demographics %>% select(SID, Condition),
+    by = c("SID")
+  ) %>%
+  left_join(
+    trial_key,
+    by = c("trial" = "Trial", "Condition")
+  ) %>%
+  mutate(
+    accuracy = case_when(
+       correct_side == "M" ~ NA,
+       correct_side != "M" ~ correct_side == chosen_side
+    )
+   ) %>%
+  left_join(
+    demographics %>% select(SID, age),
+    by = "SID"
+  )
 ```
 
 ```{r}
@@ -199,6 +222,10 @@ for (file.name in files) {
 }
 
 write_csv(all_data, path = paste0(processed.data.path, "socref_cat_data.csv"))
+
+
+
+
 ```
 
 ```{r}
@@ -233,8 +260,16 @@ d_accuracy_morph %>%
   ylim(0,1) + 
   ylab("Proportion Accurate") + 
   xlab("Morph level") + 
+  labs(
+    title = "Mean Accuracy by Morph Level"
+  ) +
   ggthemes::theme_few() +
-  scale_x_continuous(breaks = c(60, 70, 100))
+  scale_x_continuous(breaks = c(60, 70, 100)) +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 18),
+    axis.title = element_text(size = 16),
+    axis.text = element_text(size = 12)
+  ) 
 
 d_accuracy_block_morph <- 
   d_trials_block %>% 
@@ -254,14 +289,20 @@ d_accuracy_block_morph %>%
   )) + 
   geom_line() + 
   geom_pointrange(aes(ymin = ci_lower, ymax = ci_upper), 
-                  position = position_dodge(width = 4)) + #preserve vertical position while adjusting horizontal (ease of visual understanding)
+                  position = position_dodge(width = 4)) + 
   geom_hline(yintercept = .5, lty = 2) + 
   ylim(0,1) + 
   ylab("Proportion Accurate") + 
   xlab("Morph level") + 
+  labs(title = "Mean accuracy by morph level") +
   scale_colour_solarized(name = "block") + 
   ggthemes::theme_few() +
-  scale_x_continuous(breaks = c(60, 70, 100))
+  scale_x_continuous(breaks = c(60, 70, 100)) +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 18),
+    axis.title = element_text(size = 16),
+    axis.text = element_text(size = 12)
+  ) 
 
 d_accuracy_block <- 
   d_trials_block %>% 
@@ -277,85 +318,90 @@ d_accuracy_block %>%
   ggplot(aes(block, mean)) +
   geom_col() +
   geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper), width = 0.2) +
-  theme_minimal()
+  labs(
+    x = "Block",
+    y = "Mean Accuracy",
+    title = "Mean Accuracy by Test Block"
+  ) +
+  scale_y_continuous(labels = scales::percent) +
+  ggthemes::theme_few() +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 18),
+    axis.title = element_text(size = 16),
+    axis.text = element_text(size = 12)
+  ) 
 ```
 
 
-```{r }
+```{r eval=FALSE}
 
-ggplot(all_data, aes(x = t, y = y)) +
-  geom_point(alpha = 0.3) +
-  facet_wrap(~ trial, scales = "free_x")
-
-trial_proportions <- 
-  all_data %>% 
-  filter(!is.na(trial)) %>% 
-  group_by(sid, trial) %>% 
-  mutate(
-    trial_length = max(t) - min(t),
-    look = !is.na(x) | !is.na(y)
-  ) %>% 
-  mutate(look = case_when(
-    look ~ "looking",
-    !look ~ "not_looking"
-  )) %>% 
-  ungroup() %>% 
-  count(sid, trial, look, Morph) %>% 
-  spread(look, n) %>%
-  left_join(
-    demographics %>% select(SID, age),
-    by = c("sid" = "SID")
-  ) %>% 
-  replace_na(list(looking = 0, not_looking = 0)) %>% 
-  mutate(prop_looking = looking / (looking + not_looking))
-
-morph_proportions <- 
-  trial_proportions %>% 
-  group_by(Morph) %>% 
-  summarize(mean_prop_looking = mean(prop_looking))
-
-morph_proportions %>% 
-  ggplot(aes(as.factor(Morph), mean_prop_looking)) +
-  geom_col()
-
-trial_lengths <- 
-  all_data %>% 
-  mutate(trial_length = offset - onset) %>% 
-  group_by(sid, trial) %>% 
-  slice(1) %>% 
-  ungroup() %>% 
-  group_by(Morph) %>% 
-  summarize(mean_length = mean(trial_length))
-
-trial_lengths %>% 
-  ggplot(aes(as.factor(`Morph`), mean_length)) +
-  geom_col()
-
-accuracy_ci <- 
-  all_data %>% 
-  group_by(sid, trial) %>% 
-  slice(1) %>% 
-  select(sid, trial, Morph, accuracy) %>% 
-  ungroup() %>% 
-  group_by(Morph) %>% 
-  multi_boot_standard(col = "accuracy") %>% 
-  filter(`Morph` != 50)
-
-accuracy_ci %>% 
-  ggplot(aes(as.factor(`Morph`), mean)) +
-  geom_col() +
-  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
-  labs(
-    x = "Morph",
-    y = "Accuracy"
-  ) +
-  ggthemes::theme_few() 
-  
-
-
-  
-    
-  
+# ggplot(all_data, aes(x = t, y = y)) +
+#   geom_point(alpha = 0.3) +
+#   facet_wrap(~ trial, scales = "free_x")
+# 
+# trial_proportions <-
+#   all_data %>%
+#   filter(!is.na(trial)) %>%
+#   group_by(sid, trial) %>%
+#   mutate(
+#     trial_length = max(t) - min(t),
+#     look = !is.na(x) | !is.na(y)
+#   ) %>%
+#   mutate(look = case_when(
+#     look ~ "looking",
+#     !look ~ "not_looking"
+#   )) %>%
+#   ungroup() %>%
+#   count(sid, trial, look, Morph) %>%
+#   spread(look, n) %>%
+  # left_join(
+  #   demographics %>% select(SID, age),
+  #   by = c("sid" = "SID")
+  # ) %>%
+#   replace_na(list(looking = 0, not_looking = 0)) %>% 
+#   mutate(prop_looking = looking / (looking + not_looking))
+# 
+# morph_proportions <- 
+#   trial_proportions %>% 
+#   group_by(Morph) %>% 
+#   multi_boot_standard(col = "prop_looking")
+# 
+# 
+#   
+# morph_proportions %>% 
+#   ggplot(aes(as.factor(Morph), mean)) +
+#   geom_col() +
+#   geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper), width = 0.2) +
+#   labs(
+#     x = "Morph level",
+#     y = "Proportion of trial looking",
+#     title = "Proportion of trial spent looking at experimenter"
+#   ) +
+#   ggthemes::theme_few() +
+#   theme(
+#     plot.title = element_text(hjust = 0.5, size = 18),
+#     axis.title = element_text(size = 16),
+#     axis.text = element_text(size = 12)
+#   ) 
+# 
+# trial_lengths <- 
+#   all_data %>% 
+#   mutate(trial_length = offset - onset) %>% 
+#   group_by(sid, trial) %>% 
+#   slice(1) %>% 
+#   ungroup() %>% 
+#   group_by(Morph) %>% 
+#   summarize(mean_length = mean(trial_length))
+# 
+# trial_lengths %>% 
+#   ggplot(aes(as.factor(`Morph`), mean_length)) +
+#   geom_col()
+# 
+# 
+# 
+#   
+#     
+#   
   
 
 # +
@@ -386,6 +432,10 @@ trial_proportions <-
   ungroup() %>% 
   count(sid, trial, look, Morph) %>% 
   spread(look, n) %>% 
+  left_join(
+    demographics %>% select(SID, age),
+    by = c("sid" = "SID")
+  ) %>%
   
   replace_na(list(looking = 0, not_looking = 0)) %>% 
   mutate(prop_looking = looking / (looking + not_looking))
@@ -393,16 +443,23 @@ trial_proportions <-
 morph_proportions <- 
   trial_proportions %>% 
   group_by(Morph) %>% 
-  summarize(mean_prop_looking = mean(prop_looking))
+  multi_boot_standard(col = "prop_looking")
 
 morph_proportions %>% 
-  ggplot(aes(as.factor(Morph), mean_prop_looking)) +
+  ggplot(aes(as.factor(Morph), mean)) +
   geom_col() +
+  geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper), width = 0.2) +
   labs(
-    x = "Morph",
-    y = "Mean percentage of trial looking"
+    x = "Morph level",
+    y = "Proportion of trial looking",
+    title = "Proportion of Trial Spent Looking at Experimenter"
   ) +
-  scale_y_continuous(labels = scales::percent)
+  ggthemes::theme_few() +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 18),
+    axis.title = element_text(size = 16),
+    axis.text = element_text(size = 12)
+  ) 
 
 morph_proportions_per_subject <-  
   trial_proportions %>% 
@@ -442,7 +499,7 @@ accuracy_looking <-
 
 ```
 
-```{r}
+```{r eval=FALSE}
 
 lmer_data <- 
   trial_proportions %>% 
@@ -454,8 +511,8 @@ lmer_data <-
   )
   
 maximal_mod <- 
-  lme4::lmer(
-    prop_looking ~ morph * age + 
+  lmerTest::lmer(
+    prop_looking ~ morph * age_c + 
       (morph | sid) + (1 | trial),
     data = lmer_data, REML = FALSE
   )
