--- a/analysis/soc_ref_cat_analysis_2.Rmd
+++ b/analysis/soc_ref_cat_analysis_2.Rmd
@@ -187,6 +187,11 @@ files <- dir(raw.data.path,pattern = "*.txt")
 to.n <- function(x) {as.numeric(as.character(x))}
 sem <- function(x) {sd(x) / sqrt(length(x))}
 
+a <-  0
+for (file.name in files) {
+  a = a + 1
+}
+
 for (file.name in files) {
   ## print file name, so if loop breaks, we know where
   print(file.name)
@@ -527,10 +532,12 @@ lmer_data <-
     trial = factor(trial),
     age_c = as.numeric(langcog::scale(age, scale = FALSE))
   )
+
+lmer_data$morph <- relevel(lmer_data$morph, ref = "100")
   
 maximal_mod <- 
   lmerTest::lmer(
-    prop_looking ~ morph * age + 
+    prop_looking ~ morph * age_c + 
       (morph | sid) + (1 | trial),
     data = lmer_data, REML = FALSE
   )
@@ -538,5 +545,129 @@ maximal_mod <-
 g_lm <-summary(maximal_mod)
 
 g_lm
+```
+```{r}
+#Trial by trial visualization
+
+trial_viz <- 
+  all_data %>% 
+  group_by(sid, trial) %>% 
+  mutate(
+    trial_time = t - min(t),
+    bin = (trial_time %/% 0.5) * 0.5
+  ) %>% 
+  ungroup() %>% 
+  arrange(bin, sid) %>% 
+  mutate(looking = !is.na(x) & !is.na(y)) %>% 
+  select(trial_time, bin, looking, everything()) 
+
+trial_viz_n <- 
+  trial_viz %>% 
+  group_by(bin, sid, trial) %>% 
+  slice(1) %>% 
+  ungroup() %>% 
+  count(bin)
+
+trial_viz_ci <- 
+  trial_viz %>% 
+  group_by(bin) %>% 
+  multi_boot_standard(col = "looking") %>% 
+  ungroup() %>% 
+  mutate(axis_position = bin + 0.25) %>% 
+  left_join(
+    trial_viz_n,
+    by = c("bin")
+  )
+
+trial_viz_ci %>% 
+  filter(bin <= 10) %>% 
+  ggplot(aes(axis_position, mean)) +
+  geom_point(aes(size = n)) +
+  geom_line() +
+  geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper), width = 0.2) +
+  labs(
+    x = "time after beginning of trial (seconds)",
+    y = "mean proportion looking at experimenter",
+    title = "Time course of proportion looking\nat experimenter across trials",
+    size = "Number of trials\nrepresented"
+  ) +
+  scale_x_continuous(breaks = seq(from = 0, to = 10, by = 0.5)) +
+  scale_size_continuous(breaks = seq(from = 700, to = 0, by = -100), range = c(1, 4.5)) +
+  ggthemes::theme_few() +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 18),
+    plot.subtitle = element_text(hjust = 0.5, size = 12),
+    axis.title = element_text(size = 14),
+    axis.text = element_text(size = 8)
+  ) 
+  
+  
+```
+
+```{r}
+#Trial visualization, backwards from calibration
+
+trial_viz_backwards <-
+  all_data %>% 
+  group_by(sid, trial) %>% 
+  mutate(
+    t_before_decision = t - max(t),
+    time_bin = (t_before_decision %/% 0.5) * 0.5  
+  ) %>% 
+  ungroup() %>% 
+  arrange(time_bin, sid) %>% 
+  mutate(looking = !is.na(x) & !is.na(y)) %>% 
+  select(t_before_decision, time_bin, sid, everything())
+
+trial_viz_n_backwards <- 
+  trial_viz_backwards %>% 
+  group_by(time_bin, sid, trial) %>% 
+  slice(1) %>% 
+  ungroup() %>% 
+  count(time_bin)
+
+trial_viz_ci_backwards <- 
+  trial_viz_backwards %>% 
+  group_by(time_bin) %>% 
+  multi_boot_standard(col = "looking") %>% 
+  ungroup() %>% 
+  mutate(axis_position = time_bin - 0.25) %>% 
+  left_join(
+    trial_viz_n_backwards,
+    by = c("time_bin")
+  )
+
+trial_viz_ci_backwards %>% 
+  filter(time_bin >= -6) %>% 
+  ggplot(aes(axis_position, mean)) +
+  geom_point(aes(size = n)) +
+  geom_line() +
+  geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper), width = 0.2) +
+  labs(
+    x = "time before decision (seconds)",
+    y = "mean proportion looking at experimenter",
+    title = "Timecourse of children's referencing\nof experimenter prior to decision",
+    caption = "Child's decision occurs at time 0",
+    size = "Number of trials\nrepresented"
+  ) +
+  scale_size_continuous(
+    breaks = seq(from = 700, to = 0, by = -100), 
+    range = c(1, 4.5)
+  ) +
+  scale_x_continuous(breaks = seq(from = -6, to = 0, by = 0.5)) +
+  ggthemes::theme_few() +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 18),
+    plot.subtitle = element_text(hjust = 0.5, size = 12),
+    axis.title = element_text(size = 14),
+    axis.text = element_text(size = 8)
+  ) 
+
+
+mean_trial_length <- 
+  d_trials %>% 
+  mutate(trial_length = offset - onset) %>% 
+  filter(trial_length > 0) %>% 
+  summarise(mean = mean(trial_length))
 ```
 
